<resources>
    <string name="app_name">Testa</string>
    <string name="action_settings">Settings</string>
    <string name="img">%2F9j%2F4AAQSkZJRgABAQEAYABgAAD%2F4QBGRXhpZgAATU0AKgAAAAgABAESAAMAAAABAAEAAFEQAAEAAAABAQAAAFERAAQAAAABAAAAAFESAAQAAAABAAAAAAAAAAD%2F2wBDAAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcICQsJCAgKCAcHCg0KCgsMDAwMBwkODw0MDgsMDAz%2F2wBDAQICAgMDAwYDAwYMCAcIDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAz%2FwAARCABkAGQDASIAAhEBAxEB%2F8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL%2F8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4%2BTl5ufo6erx8vP09fb3%2BPn6%2F8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL%2F8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3%2BPn6%2F9oADAMBAAIRAxEAPwD9%2FKKKGOBQB8e%2F8Fef%2BC0fw3%2F4I8fD%2FwAO6h400XxN4m8QeN1v08OaPo8UYF1JaRxs7XE8jBYIQ89ujOokkHm5WKQKwH5LfEb%2FAIPgPHWqeAFt%2FCfwC8JaL4q3%2FNf6v4kuNU0%2Fb7WsUNtJk%2F8AXfAx3zx8Z%2F8AByB%2FwVHj%2FwCCln7fF9H4duLaf4a%2FC3z%2FAA54Ymg2uuqESf6VqHmAncs8iL5eDt8mKE7VZnz%2BfVAH358cf%2BDnX9tH43yXUf8AwtlvCGn3WcWXhnSLTTxAD%2Fcn8trkfUzE%2B9fO%2Fi3%2FAIKfftJ%2BPA66z%2B0D8atSjkOTFP421J4h9E87aPoBXhdFAHfH9q34pGXzP%2BFk%2BPvM%2Fvf8JDd5%2FPzK7jwZ%2FwAFRf2lfh4Y%2FwCxf2gfjRpscf3YYvGmo%2BT%2BMZm2Hr3FeE0UAfpf%2BzJ%2Fwdj%2FALX3wEv4Y%2FEPibw78VdHj2I1n4n0eJZVQfe2XFp5Eu8j%2BKVpADg7TyD%2B3P8AwSh%2F4OUPgh%2FwU416z8G3UV18K%2Filef8AHv4c1q7We31Vsn5bG9Cok7gbf3bpFK2TsR1VmH8i9TabqVxo%2Bo295Z3E1rdWsizQzwuUkhdTlWVhyrAgEEcgigD%2B%2Faivz1%2F4Nu%2F%2BCqt5%2FwAFOf2FlXxZfR3fxS%2BGE8WheJpM%2FvdSjZC1nqLDsZ0SRGOfmmtp2AVWUD9CqACiiigAr5T%2FAOC4H7U15%2Bxv%2FwAEpvjX460q4ms9bt9AOk6XcQPsmtbu%2FljsYZ4z%2Ffie4Eo%2F6519WV%2BVX%2FB4nr91o3%2FBIaO3t5mjh1bxzpVpcqP%2BWsYiupgp%2FwCBxIf%2BA0AfysUAZor9pv8Ag0Y%2F4JveG%2FjL4y8W%2FtCeM9JtNaj%2BH%2BpQ6L4Pt7lRLBbar5a3E960ZGDLbxvbCEnIVrhnAEkUbLz4rERoUnVl0NKNJ1JqET4D%2BE%2F%2FAAQ9%2Fa0%2BNnhCPXvD%2FwAB%2FHbaXcIJIJdRtk0trhCMh40unjeRSCCGUEEHgmvD%2Fj3%2BzB8Rv2WPFaaH8SfAvizwJq0ys8NtrulzWLXCA4Lx%2BYoEi5I%2BZCRz1r%2B3lyzuWJLMxySTnJrK8beBtF%2BJvhS50HxNouj%2BJNCvBi403VrKK%2Bs5x%2FtwyqyN%2BINfPQ4inze%2FBW8tz1pZSre7LU%2FhhxX1R8Df%2BCI37WH7RnhVNc8K%2FA3xtNpMyLJBdanFFo8d0jDKvF9seLzVI53JuHvX9XHws%2FYZ%2BCfwL8Vpr3gn4N%2FCnwfrkZzHqWi%2BEtPsbyL%2FAHJYoldR7KQK9TYtIxZiWZuSSetXW4h0%2FdQ%2B%2FwD4H%2BYU8pf25fcfxMftOfsa%2FFT9jHxdBofxU8A%2BJ%2FAupXgdrRdVsmhiv1TAdoJeY5lUsoLRswBIGa8zr%2B1H9vb9iTwt%2FwAFDv2VPFXwp8WWlnLDr1uzaTezRb30PU1Rha30R%2B8rxu2DtILxtJGcrIwP8W2q6XcaJqdzZ3cL291ZytBNE%2F3o3UlWU%2B4IIr1ctx6xUG2rNbnBjMK6Mrbo%2FUr%2FAINAP2kbr4Qf8FY4fBZmk%2Fsv4reG7%2FSJIN%2BIvtNrGb%2BGYjPLKltPGvXidvXI%2FqqHSv4zf%2BDe%2FV59E%2F4LPfs%2BzW%2B7zH8SG3O3%2B5LbTxv%2FAOOu3%2F1q%2FsyFeicgUUUUAFfmx%2FwdkfC%2F%2FhYf%2FBFzxzqCqzSeDNa0fW0Cn1vEs2OO4C3bH8M9q%2FSc9K%2FI%2FwDbvvfip%2FwXL%2BN%2Fxw%2BAvw48YSfDz4D%2FAAbt5%2FDviHVLWH%2FSvH%2Fi3ymePTDKwAisbWZUFwFOTgg7hNE0WdWrGnHnm7IqMXJ8sT%2BXVI2kcKFYsxwAByTX9Mv%2FAAQ01L4W%2FwDBH7%2Fgn43hH4yfHz4I6T4v8U%2BJJ%2FFN7pEHjCxnn0Mz2lnALKQJKzSTILXMjIpRWcqGYKHb8cP%2BCWv7KngP9pb%2FAIKI%2FBj4A%2FFD4eax4f1O18Ra5D43kuNSurW81lYbNp7fTZbf5DZmGW0ljd42Eji5OdpjU1%2FQB8Q%2F%2BCRn7Bv7LfwyuvEHjL4T%2FCXwh4V09lSbVPEeoTLCjt92Pz7m4LM7YIVAxZiMAE14%2Bb16bSw87666K534GnNN1Y2001PX%2FB%2F%2FAAVV%2FZl8e3Jh0v8AaD%2BDU03aObxfY2rtxn5RLIhbj0zXrPw0%2BMvg741aXcX3gvxf4U8YWVm4iuLjQtXt9SigdskK7wO4UkA4BIJwfSvzw%2BFv%2FBJz%2Fgmf%2B3%2Fql9e%2FDTQvAfie80vE2oWnhPxlqFvJAhIUPJaLcho4ycKHEaqScA5r58%2F4Ks%2F8EwrH9in9p39nHSf2Jp9a%2BB%2FxT%2BNmqar4Xu%2F7G8S6jHb3lhCtnPLcTs8srrBbhvNkVAcqAQjMi14scHh5z9nFyjLzWnfXqei8TWjHnaTXkz9tkDSMFUMzNwAByTXk%2Fjf9vL4GfDS5vIfEXxr%2BEOg3GnymC6gv%2FGem281vICQY3jaYMHBBG0jOQeK%2FG%2F8A4KvfsOfty%2FsLfsaat8RW%2FbG%2BIHxP8MWKR2nizToL6902awtrl1txIhMz%2BfCZJFR%2F9WyiQHaV3lfujRP%2BDZ39iW%2B8L6AIPhneavDa2cW3Uh4r1RZNbUopFxLsuAmZPv8A7pUUbsAAYAl4PD04KpOpdO691du9yo4mtOXJGKTXc938O%2F8ABX39lnXNet7S1%2FaG%2BD7XLuCgn8T2tvGxHOPMkZUGfduTx1r%2BWz%2FgrJ%2ByXH%2Byb%2B2V4ns9L8aeEviJ4V8VXU%2FiDQPEHh3VIL%2B2u7WeeQiOUwsyx3EbZV4yewYZR1J%2FfrxJ%2Bzp%2FwS2%2FZ28bP8ONf039m%2FQ%2FEWnzG2ubLWNYFxdWMwOGjubmaZzC6nqs0ile4FfMv%2FBx5%2FwRt%2BBP7P8A%2FwAE7H%2BKvwd%2BHOi%2BDdb8OeIdPk1G80y9upIbzTLsywkeW8zxYNxPasrKowowDtIFelltSjQq8sVJc%2BmqXyOLFqpVhzO3u9j4C%2F4NhvhxN8Rv%2BC2nwb2wvLa6C2p6xdMF3CFYdMutjH0HnNEufVhX9gI6V%2FLf%2FwAEH%2F2AfFn7aPjP4sfGj4C%2BJ%2FEX7NOu%2FD3T9I0nwXc294%2BqaXqWsm2Rr6G%2BeaMme1la3EssO1hCb%2BD93MkYjf8AfL%2Fgkt%2B3zqP%2FAAUF%2FZYk17xV4fj8I%2FEzwPrd54L8faDESYtK12xKrcLFksfLcOkirufZvMe%2BQoXb6GNaEpumnrHf5nlypyUVJ7M%2BnqKKK1IAnAr8w%2F8AgizrNv8ADT4rftefBjWmaz%2BIHhL41614qvLacbbi%2FwBK1YQS2OoYP3lkSPJIztDw5I8xQf08r5B%2F4KD%2FAPBJuz%2Fa4%2BKWgfFr4efEDXvgf8evCdt9h03xpotsl2l7Z79xs9Qs3KpdwcthWYYLc71Gw8eOwv1ii6d7G%2BGreyqKZ%2BZf7UZg%2BD3%2FAAVv%2Fai%2BJ1zJcRSfCHx18JfiZeSQ2zTTvoMeny6VqoUKCxRYdU8xsdrfnpx9lftg%2FwDBMib%2FAIKD%2FwDBSP4aeNPiI2heNP2a%2FBHgmafT%2FDp1N%2FJ1DxBPcORcvFGAJoHtmt2DCTa32dQQVLB%2FBfhf8L%2Fjh%2Byn%2FwAFyPBsn7UGrfCvxtbftNfDnWPh5Z3XhuykisNW%2Fs37PebdQtJ41jEsseYdqho3WbaB1FfU3hv%2FAIJC%2BFfhPMsPwv8AjB%2B0d8IdBgJNr4b8NeOvtGhWGWZmENnqEF2kalmJ2jjPQCvn8ZJ0JRjJ2kopX3VrW9en4no4eLqJuKur7XseW%2FtAf8ETND8B%2FtZ%2Fs%2F8Axa%2FZg8L%2BFfhX4k8DeMbf%2FhMY9Onk0%2B21nw7JxdxeQoZJJTGJIwFCF1uGDE7VKanwAvoP28%2F%2BCzvjf4taXdR6n8M%2F2Z%2FDrfDjw3exESWupeJb0%2Bfq1xbyDIJt7dltZOcHfEykqST6J4z%2FAOCVSfFix%2Fs7xt%2B0b%2B1L4v8AD8ytFe6LL4wstKsdThYYeC4GnWFtJJG65VlLjIJGRmvoT4KfBPwj%2Bzl8LNF8EeBPDul%2BFPCfh%2BEwadpenxeXDbqWLMe5Z3Zmd3cs7uzMzMzEnhqYpclnLmla1%2Bye%2B%2B%2FY7I4Zue1o3vb0Kv7RXwM0r9pz4AeNvhzrkjW%2BkePNCvNBuZ1Te1qtxC0XnKuRloywdeR8yCvjH9gT4rfEf4%2Ff8EiPG3wf0HVrTw3%2B058E9Bv%2FAIW6nBNetDNoupWsMlrp175gG9Umt0ieK6AKtLHIVJ8tiP0BwMV89ftOf8EzPhr%2B098VLP4hyXHjX4d%2FFCxtRYR%2BN%2FAWvy6BrktqNv8Ao80kYaO4j%2BVRiaNyFUKCF4rHD1oqPJPumnvr5rsa16Um%2BaHaz6aHiP7I%2FwDwb3%2Fs2%2FDL9kHwl4M%2BIvwf8G%2BKvGEmiW6eLNZklnmu7rUXiX7W1vdhklijWUusZi8vCqpwDknwjQv2Q%2FHH7Nf7B3wb%2FY5%2BLmraP4xm%2BJXxuhtNJsItS%2B0s3gHTLiHWL55C6J%2B7jW1fcuCEF3EuB9xfsy6%2F4JxeJL%2BwFrP%2B1l%2B1g1vt2fute0O3mI%2F66x6SsmffcDXjX7bXwF%2BG3%2FBKX9gn49fGOxvPGXjD4p614Om8JweM%2FGmvz%2BIPEVxJek2tpaxTTfLHCk9wspigSMMsOWBCKV7qOKcp2lPmbaaVnv032%2BRx1aFo3UeVJau5c%2F4NnNNNr%2FwRz%2BHuoNbw2MOvarr2qLGoEcUKHVLmP2AUCLrwAB6Cuk%2F4N%2F7qP4w%2BO%2F2ufjVon%2FIhfFb4t3h8LyiNkj1W2sk8l9Qjz95J3c8jndE4OCMDxv8AZZ%2F4IbftSeNv2SvBXwP%2BNPxy8L%2FDz4IaDpi2OoeD%2Fhlp7jVfEVvIXllt73U50UxlpJH80RLJFJudSpBDD9WPgt8F%2FC%2F7Ovwq0HwP4J0Sx8OeE%2FC9mmn6XptopEVrCg4GSSzMTlmdiWdmZmLMST9Bg8DKlWqVpPWT%2FA8yviFOEYJbHUUUUV6RyhRRRQB8l%2F8ABZb9hbxF%2B29%2Byfbt8O7yPSfjJ8LtbtPHPw91AtGnl6vZEskDM%2BFCTIXjw5EYkMTvlUxWH%2FwTi%2F4KLeFf%2BCiXwem1Sxt5fC%2FxC8Ky%2FwBmeO%2FA%2BoK0Oq%2BD9TRjHNBNDIBIITIjiOQqM7WRtssckafaDDcK%2FLb%2FAIOLP2b%2FAIY%2FDb4WXv7QfhbxY3wj%2Fao0W1D%2BD9a0DUXstX8ZfZjEJ7CS2iBe%2FQWx2klD5aiPzHECsh8%2FMMvjioW2a2Z1YXFOjK%2FQ%2FQDiuF%2FaWuPiNZ%2FArxJP8IrfwjefEi3tll0O28UCb%2BybuVZEZ4ZjC6Ou%2BISIjbwqyMhY7Q1flH%2FwTk%2F4Lm%2FtR%2FGnw0lh%2FwAK9%2BG37SWsabZC51DS9A16Hwf42tIl277mSxnU29%2FGdwKvpsbx8puZCwWvotP%2BDinwV4V8U6h4b8dfs9%2FtVeB%2FFGi2kN9qWm3HgdLk2cMrMscpK3Cv5TMrKsjRqrFSBkggfLzynFUpX5b%2FAJHtRzCjNWvY9g%2BAH7S%2F7T3x4%2BOnhuz8Qfs6ab8Evh7psM03i7UPEviy21zUL6YxOsNppSWLKp2zbGa4nXY0YYBVYKH%2Bqx0r89NX%2FwCDlv4C6Ro97ff8IN%2B0RPbadA91dOngEoltEgyzyM86qiqOSxOB3NVPiT%2FwXN%2BIT%2FDG68W%2BB%2F2Qvi1Y%2BFbWzW8l8UfFbVLH4faJbROB5UwmuWkSdXLptRJFaTcAmWIySy%2FE1X7tPl%2FrzYQxlGmtZ3P0VdljjZmZVWNSzMx2qigZJJPAAGSSegr87%2FDHiGP%2FAILnf8FFvDC%2BF5H1L9lX9lvxANb1HXI03WHxD8YQqDawWz9JbWyD%2BYXXKyCRgQ0dxBIPif8AY%2B%2FbW8cf8F6P2x7r4X%2FtIfFe1%2BFnwRaGIWfhjwW0ugWPjy%2BluNlppkt5cKZ5BcxxzuLeWRZJhCTDErAvH%2FQT8F%2Fgr4T%2FAGd%2FhbofgnwNoGm%2BF%2FCfhu3Fpp2l6fCIre1TJJwOpZmLMztlnZmZiWYk%2B3luUewl7WrrLoux5uMzD2q5IbHUgYFFFFe6eaFFFFABRRRQAE4r8O%2Fh%2FwD8FntP8Of8HCXxC8R61DpFx8NdauYPhBaatLbwtc6Ja2FxIgu4rnqLWTVZbt5RuCNC0Uh3G3QH9Vv%2BCkv7UTfsW%2FsGfFj4nwyRxal4S8OXVxpPmIHSTUnXybFCp4Ie6kgXHP3uh6V%2FJdpfh%2BPTvDcOlyYuY47cW8rOM%2Bfxh2PruOSc9cmgD9xf%2BChP%2FBrho%2Fjvxt%2Fwn37NPiCx%2BGPiK1vTqkHhm6lntNJs7vzEkE2l3ltm40plYMwjjSWHcUCJCqnPmegeJv23fBFx4a8L%2FtD%2FAAa%2BKWt674Slb%2FhCPjV4CsLLXvE3hCQrtYXkFlL5esaZNshW4tp0t5Jo1LMJLhYZIuw%2FZD%2F4Or%2FCPh34P%2BGNC%2BJvw%2F8AiBqWt6Hp8Ok6jr2kXVpfnVri3UQS3TxzSQFDI6FyAzkFjya%2BpPhx%2FwAHI%2F7KPjqJf7Q8WeI%2FCM7f8sdZ8NXhI57vbJNH%2FwCP0mk1ZgfIPi3%2FAIKI%2FHD9rvw3b6837L%2FxK%2BJHiXwhrdxoej%2BA7PStQh8D2muWEipLres3d1DBJdGO7B%2By6aVVbYW7yTyrcNC8HL23%2FBEX9sz%2FAIKvfGOx8ZftXeOrfwToljctNa6ZLcQalcaVGxUmPTdLtXawtGZAE%2B0zTTTgohdJSK%2BjP2Fv%2BC1n7Mv7PXw6%2BKkfiP4mQG41b4seMdasoNP0e%2Fv3uLS51i4lgkBhgZRvRlYBiDg1q%2BP%2FAPg6p%2BAPh0TR6D4Q%2BK3ieZSRFJHptnZ28noS01ysig%2F9cyfaop0oU48sFZFSk5O7OV%2F4Ky%2BHvgr%2FAMEgf%2BCSV78AfBPg%2FTdQuvjRHdaOsWsE3t5qLeXGL7XLqVuZbmDdb%2BUwwIppLXYqxxBF%2Bov%2BCHn7et1%2FwUA%2FYE8O694guhceP%2FCMz%2BFPFzYwbjULZExd4wo%2F0m3eC4%2BUBVadkH3K%2FBr%2FAIKh%2FwDBR65%2F4Ke%2FtLJ46%2FsW48M6PoumJoGm6RLei6NssUsryyMyqq75JJCTgfdWMZO0V7%2F%2FAMGyH7Uc3wM%2F4KO3Xw%2FuJdug%2FG7RJLMx%2BWPl1fTY5bu1k3nlQ1qdQjI%2FiIh%2FugVoSf0S0UA5FFABRRRQBk6l4Zk1Kd5F1bVbVXwQkDoqpwBxlCe2eT1JrStovs8Cx7mk2ALub7zYHU%2B5oooA%2FN%2F%2FAIOp%2FGF94c%2F4Jaw6fauq23iTx5oGnXykf6yFbhroD%2Fv7bRHnPAP1H8%2BsI3SqP9rFFFAHG%2FAi%2Bk1P4Y2NxM26WeW4kc%2BrNM5P6muwoooAwfh9%2FwAeOqf9hi9%2F9HNW8elFFAHKfDO7efVPFcbH5Ydbm2j0yq%2F4frX0H%2FwT41W40P8A4KMfs63VrNJDOvxO0CEOjFTsmvEgkXjs0UrqR3DGiigD%2BtgDaKKKKACiiigD%2F9k%3D</string>
    <string name="booki">Radiant</string>
    <string name="welcome_back">Welcome</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Skip</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="Logout"><u>LOGOUT</u></string>
    <string name="Update_Profile"><u>Update Profile</u></string>
    <string name="error_cannot_open">Unable to open Camera</string>
    <string name="error_cannot_write">Unable to access Storage</string>
    <string name="error_cannot_get_permission">Permission not granted</string>
    <string name="error_not_having_camera">Cant find Camera</string>
    <string name="open">Home</string>
    <string name="close">Home</string>
    <string name="line1">1. Total duration of examination is defined on the exam panel for theory exam and
    for viva voce.</string>
    <string name="rplintro"> • A certification program under PMKVY to provide recognition to the informal learning
        or learning through work to get equal acceptance as the formal levels of education.</string>
    <string name="rplintro2"> • It aims to appreciate prior learning irrespective of the medium of achieving it. In short, RPL is a process
    of assessment of an individual’s prior learning to give due importance to learning as an outcome rather than learning as process.</string>
    <string name="benefits2">Benefits Under RPL 4.0 – BICE</string>
    <string name="benefitemp">Benefits to Employee :-</string>
    <string name="benefit1"> 1)No fee charged for assessment and certification</string>
    <string name="benefit2"> 2)Successfully certified candidates shall receive a pay-out of Rs 500</string>
    <string name="benefit3"> 3) 3 year accidental insurance INR 2 Lakhs free of cost</string>
    <string name="benefit4"> 4) Skill certificate can be further used for taking up next
        level of job role in the respective skill sector</string>
    <string name="hint_name">First Name*</string>
    <string name="hint_last_name">Last Name*</string>
    <string name="hint_mobile"> Mobile No*</string>
    <string name="hint_aadhar">Aadhar No*</string>
    <string name="hint_pancard">PAN Card*</string>
    <string name="hint_bank_ac">Bank Account No*</string>
    <string name="hint_ifsc_code">IFSC Code*</string>
</resources>