<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    tools:context="com.radiant.rpl.testa.Activity_Rplintroduction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pmkvylogo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RPL 4.0 – BICE"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/nliveo_black_light"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rplintro"
        android:justificationMode="inter_word"
        android:textStyle="normal"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rplintro2"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:textStyle="normal"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/darkblack"
        android:text="@string/benefits2"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/darkblack"
        android:text="@string/benefitemp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/benefit1"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/benefit2"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/benefit3"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/benefit4"
        android:layout_marginTop="5dp"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >
        <Button
            android:id="@+id/button_company"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_pressed"
            android:layout_marginBottom="25dp"
            android:textColor="@color/white"
            android:drawableRight="@drawable/ic_right_arrow_button"
            android:text="Start"
            />


    </RelativeLayout>

</LinearLayout>
</ScrollView>
</LinearLayout>