<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"

    tools:context="com.radiant.rpl.testa.Reverify">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:elevation="5dp"
        android:fadingEdge="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ffffff"
        android:paddingTop="20dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:hint="@string/hint_name"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                     />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:hint="@string/hint_last_name"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_last_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"

                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile_no"
                android:layout_width="match_parent"
                android:hint="@string/hint_mobile"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_mobile_noo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>







            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_aadhar"
                android:layout_width="match_parent"
                android:hint="@string/hint_aadhar"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_aadhar_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                     />
            </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pancard_no"
            android:layout_width="match_parent"
            android:hint="@string/hint_pancard"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_pancard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_bank_username1"
            android:layout_width="match_parent"
            android:hint="@string/name_as_in_bank"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_bank_username1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
               />
        </android.support.design.widget.TextInputLayout>







        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bank_ac"
                android:layout_width="match_parent"
                android:hint="@string/hint_bank_ac"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_bank_acdetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                     />
            </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ifsc_code1"
            android:layout_width="match_parent"
            android:hint="@string/hint_ifsc_code"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ifsc_code1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                 />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_marginTop="20dp"
                android:id="@+id/btn_Register"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/mybuttons">

            </Button>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>


